common/tests/badSyntax/primitiveExps.output
primitiveExps.tyco:13.7: 
Syntax error at 0
primitiveExps.tyco:16.7: 
Floats no longer supported
primitiveExps.tyco:19.9: 
Syntax error at e4
3 errors
